<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/androidLogo"
        android:layout_width="146dp"
        android:layout_height="155dp"
        android:contentDescription="@string/logoOfAndroid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/androidlogo" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="196dp"
        android:layout_height="252dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661">

        <TableRow
            android:layout_width="325dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fadeIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fadeIn" />

            <Button
                android:id="@+id/fadeOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fadeout" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zoomIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zoomin" />

            <Button
                android:id="@+id/zoomOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zoomout" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/leftRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leftRight" />

            <Button
                android:id="@+id/TopBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topBottom" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bounce" />

            <Button
                android:id="@+id/flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flash" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/rotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rotate" />

            <Button
                android:id="@+id/several"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/several" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <TextView
        android:id="@+id/currentAnimation"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:text="@string/actualAnim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <SeekBar
        android:id="@+id/animationSpeedBar"
        android:layout_width="243dp"
        android:layout_height="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

    <TextView
        android:id="@+id/animationSpeedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animationSpeed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

</androidx.constraintlayout.widget.ConstraintLayout>